[package]
name = "chainlink-simple"
version = "0.1.0"
edition = "2021"
description = "A simple, lean issue tracker CLI - no hooks version"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
